syntax = "proto3";
package graph;

message SerialGraph {
	map<uint64, Node> nodes = 1;
	bool directed = 2;
	uint64 nodeCount = 3;
}

enum NodeType {
	UNKNOWN = 0;
	POST = 1;
	IMG = 2;
	TAG = 3;
	USER = 4;
}

message Node {
	string value = 1;
	int64 weight = 2;
	NodeType type = 3;
	map<uint64, int64> adjacent = 4;
}
